Show hyperfine output

--- a/.github/workflows/ci_bench_block_execution.yaml
+++ b/.github/workflows/ci_bench_block_execution.yaml
@@ -72,7 +72,7 @@ jobs:
       run: |
         sudo swapoff -a
         BINS="base,head"
-        hyperfine -w 5 -N -r 10 --export-markdown "benchmark_comparison_against_main.md" \
+        hyperfine -w 5 -N -r 10 --show-output --export-markdown "benchmark_comparison_against_main.md" \
         -L bin "$BINS" -n "{bin}" \
         "./bin/ethrex-{bin} --network test_data/genesis-l2.json --import ./test_data/l2-loadtest.rlp --only_import"
 
