--- a/.github/workflows/ci_bench_block_execution.yaml
+++ b/.github/workflows/ci_bench_block_execution.yaml
@@ -8,7 +8,7 @@ jobs:
   build-binaries:
     strategy:
       matrix:
-        branch: [ head ]
+        branch: [ base, head ]
     name: Build ethrex for ${{ matrix.branch }}
     runs-on: ubuntu-22.04
     steps:
@@ -71,7 +71,7 @@ jobs:
       id: run-benchmarks
       run: |
         sudo swapoff -a
-        BINS="base,head"
+        BINS="head"
         hyperfine -w 5 -N -r 10 --show-output --export-markdown "benchmark_comparison_against_main.md" \
         -L bin "$BINS" -n "{bin}" \
         "./bin/ethrex-{bin} --network test_data/genesis-l2.json --import ./test_data/l2-loadtest.rlp --only_import"
