--- a/.github/workflows/ci_gha.yaml
+++ b/.github/workflows/ci_gha.yaml
@@ -20,4 +20,4 @@ jobs:
       - name: actionlint
         uses: raven-actions/actionlint@v2
         with:
-          flags: "-ignore SC2086 -ignore SC2006"
+          flags: "-ignore SC2086 -ignore SC2006 -ignore SC2046"
