--- a/.github/workflows/ci_bench_block_execution.yaml
+++ b/.github/workflows/ci_bench_block_execution.yaml
@@ -49,6 +49,10 @@ jobs:
       uses: actions/checkout@v4
       with:
         ref: ${{ github.head_ref }}
+        lfs: true
+
+    - name: Checkout LFS objects
+      run: git lfs checkout
 
     - name: Install Hyperfine
       uses: taiki-e/install-action@v2
@@ -74,7 +78,7 @@ jobs:
         BINS="head"
         hyperfine -w 5 -N -r 10 --show-output --export-markdown "bench_pr_comparison.md" \
         -L bin "$BINS" -n "{bin}" \
-        "./bin/ethrex-{bin} --network test_data/genesis-l2.json --import ./test_data/l2-loadtest.rlp --only_import"
+        "./bin/ethrex-{bin} --network test_data/genesis-l2.json --import ./test_data/2000-blocks.rlp --only_import"
 
     - name: Upload PR results
       uses: actions/upload-artifact@v4
