--- a/.github/config/assertoor/network_params_tx.yaml
+++ b/.github/config/assertoor/network_params_tx.yaml
@@ -9,8 +9,12 @@ participants:
     cl_image: sigp/lighthouse:v5.3.0
     validator_count: 32
 
+network_params:
+  # The address of the staking contract address on the Eth1 chain
+  deposit_contract_address: "0x4242424242424242424242424242424242424242"
+
 additional_services:
-  # In the future we may want to run the blob spammer in this check if possible 
+  # In the future we may want to run the blob spammer in this check if possible
   # through the tx_spammer addition service config.
   - assertoor
   - dora
