--- a/.github/workflows/daily_reports.yaml
+++ b/.github/workflows/daily_reports.yaml
@@ -50,7 +50,7 @@ jobs:
           bash .github/scripts/hive_levm_revm_diff.sh results_revm.md results_levm.md >> diff.md
           cat diff.md >> $GITHUB_STEP_SUMMARY
 
-      - name: Post results to Slack
+      - name: Post Hive results to Slack
         env:
           SLACK_WEBHOOKS: >
             ${{ github.event_name == 'workflow_dispatch'
@@ -64,8 +64,24 @@ jobs:
             }}
         run: |
           for webhook in $SLACK_WEBHOOKS; do
-            sh .github/scripts/publish_levm_hive.sh "$webhook"
             sh .github/scripts/publish_hive.sh "$webhook"
+          done
+          echo "Sending Results" >> $GITHUB_STEP_SUMMARY
+
+      - name: Post Hive LEVM results to Slack
+        env:
+          SLACK_WEBHOOK: >
+            ${{ github.event_name == 'workflow_dispatch'
+              && secrets.TEST_CHANNEL_SLACK
+              || format(
+                  '{0} {1}',
+                  secrets.ETHREX_L2_SLACK_WEBHOOK,
+                  secrets.LEVM_SLACK_WEBHOOK
+                )
+            }}
+        run: |
+          for webhook in $SLACK_WEBHOOK; do
+            sh .github/scripts/publish_levm_hive.sh "$webhook"
           done
           echo "Sending Results" >> $GITHUB_STEP_SUMMARY
 
@@ -150,8 +166,7 @@ jobs:
             ${{ github.event_name == 'workflow_dispatch'
               && secrets.TEST_CHANNEL_SLACK
               || format(
-                  '{0} {1} {2}',
-                  secrets.ETHREX_L1_SLACK_WEBHOOK,
+                  '{0} {1}',
                   secrets.ETHREX_L2_SLACK_WEBHOOK,
                   secrets.LEVM_SLACK_WEBHOOK
                 )
