--- a/cmd/ethrex/Cargo.toml
+++ b/cmd/ethrex/Cargo.toml
@@ -41,7 +41,7 @@ name = "ethrex"
 path = "./ethrex.rs"
 
 [features]
-default = ["libmdbx", "c-kzg", "blst", "l2"]
+default = ["libmdbx", "c-kzg", "blst"]
 dev = ["dep:ethrex-dev"]
 c-kzg = ["ethrex-vm/c-kzg", "ethrex-common/c-kzg", "ethrex-blockchain/c-kzg", "ethrex-p2p/c-kzg"]
 metrics = ["ethrex-blockchain/metrics", "ethrex-l2/metrics"]
