--- a/crates/l2/prover/zkvm/interface/Cargo.toml
+++ b/crates/l2/prover/zkvm/interface/Cargo.toml
@@ -16,7 +16,7 @@ ethrex-storage = { path = "../../../../storage", default-features = false }
 ethrex-trie = { path = "../../../../common/trie", default-features = false }
 
 # Temporarily pin version because 0.11.1 breaks compilation
-alloy-rpc-types-engine = "=0.11.0"
+# alloy-rpc-types-engine = "=0.11.0"
 
 [build-dependencies]
 risc0-build = { version = "1.2.2", optional = true }
