update test nightly job

--- a/.github/workflows/ci_l2_prover_nightly.yaml
+++ b/.github/workflows/ci_l2_prover_nightly.yaml
@@ -67,4 +67,4 @@ jobs:
       - name: Test Prover Execution
         run: |
           cd crates/l2/prover
-          RUST_LOG=info make perf-pico
+          RUSTUP_TOOLCHAIN=nightly-2024-11-27 RUST_LOG=info make perf-pico
