--- a/.github/workflows/ci_bench_block_execution.yaml
+++ b/.github/workflows/ci_bench_block_execution.yaml
@@ -78,7 +78,7 @@ jobs:
         BINS="main,head"
         hyperfine --setup "cargo run --release -- removedb" -w 5 -N -r 10 --show-output --export-markdown "bench_pr_comparison.md" \
         -L bin "$BINS" -n "{bin}" \
-        "./bin/ethrex-{bin} --network test_data/genesis-l2.json --import ./test_data/2000-blocks.rlp --only_import"
+        "./bin/ethrex-{bin} --network test_data/genesis-l2.json import ./test_data/2000-blocks.rlp"
 
     - name: Upload PR results
       uses: actions/upload-artifact@v4
