--- a/.github/workflows/ci_bench_block_execution.yaml
+++ b/.github/workflows/ci_bench_block_execution.yaml
@@ -76,7 +76,7 @@ jobs:
         run: |
           sudo swapoff -a
           BINS="base,head"
-          hyperfine --setup "cargo run --release -- removedb" -w 5 -N -r 10 --show-output --export-markdown "bench_pr_comparison.md" \
+          hyperfine --setup "./bin/ethrex-base removedb" -w 5 -N -r 10 --show-output --export-markdown "bench_pr_comparison.md" \
           -L bin "$BINS" -n "{bin}" \
           "./bin/ethrex-{bin} --network test_data/genesis-l2.json import ./test_data/2000-blocks.rlp"
 
