--- a/crates/vm/levm/Cargo.toml
+++ b/crates/vm/levm/Cargo.toml
@@ -21,6 +21,7 @@ sha3 = "0.10.8"
 datatest-stable = "0.2.9"
 walkdir = "2.5.0"
 libsecp256k1 = "0.7.1"
+p256 = { version = "0.13.2", features = ["ecdsa"] }
 sha2 = "0.10.8"
 ripemd = "0.1.3"
 num-bigint = "0.4.5"
