--- a/cmd/ethrex/Cargo.toml
+++ b/cmd/ethrex/Cargo.toml
@@ -50,3 +50,12 @@ redb = ["dep:redb", "ethrex-storage/redb"]
 blst = ["ethrex-vm/blst"]
 l2 = ["dep:ethrex-l2", "ethrex-vm/l2"]
 based = ["l2", "ethrex-rpc/based"]
+
+
+[dev-dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
+
+[[bench]]
+path = "../../bench/criterion_benchmark.rs"
+name = "criterion_benchmark"
+harness = false
