--- a/.github/workflows/ci_criterion_benchmark.yml
+++ b/.github/workflows/ci_criterion_benchmark.yml
@@ -3,6 +3,8 @@ name: criterion benchmark
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: ["**"]
 
 permissions:
   # deployments permission to deploy GitHub pages website
