--- a/.github/workflows/ci_criterion_benchmark.yml
+++ b/.github/workflows/ci_criterion_benchmark.yml
@@ -25,7 +25,7 @@ jobs:
       uses: benchmark-action/github-action-benchmark@v1
       with:
         tool: 'cargo'
-        output-file-path: output.txt
+        output-file-path: cmd/ethrex/output.txt
         benchmark-data-dir-path: "."
         # Access token to deploy GitHub Pages branch
         github-token: ${{ secrets.GITHUB_TOKEN }}
