Add command and fetcher

--- a/cmd/ethrex_l2/Cargo.toml
+++ b/cmd/ethrex_l2/Cargo.toml
@@ -11,6 +11,7 @@ ethrex-blockchain.workspace = true
 ethrex-prover.workspace = true
 ethrex-rlp.workspace = true
 ethrex-rpc.workspace = true
+ethrex-storage = { workspace = true, features = ["libmdbx"] }
 
 serde_json.workspace = true
 serde.workspace = true
@@ -33,6 +34,8 @@ itertools = "0.13.0"
 strum = "0.26.3"
 secp256k1.workspace = true
 keccak-hash.workspace = true
+reqwest.workspace = true
+sha2.workspace = true
 
 [[bin]]
 name = "ethrex_l2"
