--- a/crates/networking/rpc/Cargo.toml
+++ b/crates/networking/rpc/Cargo.toml
@@ -27,6 +27,7 @@ tokio-util.workspace = true
 reqwest.workspace = true
 k256 = { version = "0.13.3", features = ["ecdh"] }
 sha3 = "0.10.8"
+sha2.workspace = true
 
 # Clients
 envy = "0.4.2"
