--- a/crates/l2/Cargo.toml
+++ b/crates/l2/Cargo.toml
@@ -31,6 +31,7 @@ envy = "0.4.2"
 thiserror.workspace = true
 directories = "5.0.1"
 toml = { version = "0.8.19", features = ["parse"] }
+bincode = "1.3.3"
 
 zkvm_interface = { path = "./prover/zkvm/interface/", default-features = false }
 
