--- a/.github/workflows/ci_bench_block_execution.yaml
+++ b/.github/workflows/ci_bench_block_execution.yaml
@@ -52,7 +52,9 @@ jobs:
           lfs: true
 
       - name: Checkout LFS objects
-        run: git lfs checkout
+        run: |
+          git lfs fetch
+          git lfs checkout
 
       - name: Install Hyperfine
         uses: taiki-e/install-action@v2
@@ -78,7 +80,7 @@ jobs:
           BINS="base,head"
           hyperfine --setup "./bin/ethrex-base removedb" -w 5 -N -r 10 --show-output --export-markdown "bench_pr_comparison.md" \
           -L bin "$BINS" -n "{bin}" \
-          "./bin/ethrex-{bin} --network test_data/genesis-l2.json import ./test_data/l2-loadtest.rlp --removedb"
+            "./bin/ethrex-{bin} --network test_data/genesis-l2.json import ./test_data/2000-blocks.rlp --removedb"
           echo -e "## Benchmark Block Execution Results Comparison Against Main\n\n$(cat bench_pr_comparison.md)" > bench_pr_comparison.md  
       - name: Upload PR results
         uses: actions/upload-artifact@v4
@@ -86,7 +88,7 @@ jobs:
           name: pr-result
           path: bench_pr_comparison.md
 
-      - name: Find comment
+        - name: Find comment
         continue-on-error: true
         uses: peter-evans/find-comment@v3
         id: fc
