feat: decode block import faster

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,10 @@ default-members = ["cmd/ethrex"]
 version = "0.1.0"
 edition = "2021"
 
+[profile.release-with-debug]
+inherits = "release"
+debug = 2
+
 [workspace.dependencies]
 ethrex-blockchain = { path = "./crates/blockchain" }
 ethrex-common = { path = "./crates/common" }
