--- a/cmd/ethrex/Cargo.toml
+++ b/cmd/ethrex/Cargo.toml
@@ -48,5 +48,5 @@ metrics = ["ethrex-blockchain/metrics"]
 libmdbx = ["ethrex-storage/libmdbx"]
 redb = ["dep:redb", "ethrex-storage/redb"]
 blst = ["ethrex-vm/blst"]
-l2 = ["dep:ethrex-l2", "ethrex-vm/l2"]
+l2 = ["dep:ethrex-l2", "ethrex-vm/l2", "ethrex-rpc/l2"]
 based = ["l2", "ethrex-rpc/based"]
