--- a/.github/workflows/ci_criterion_benchmark.yml
+++ b/.github/workflows/ci_criterion_benchmark.yml
@@ -19,6 +19,13 @@ jobs:
     - name: Install Rust
       uses: dtolnay/rust-toolchain@1.85.0
     - uses: actions/checkout@v4
+    - name: Import GPG key
+      uses: crazy-max/ghaction-import-gpg@v6
+      with:
+        gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
+        git_user_signingkey: true
+        git_commit_gpgsign: true
     - name: Run benchmark
       run: cd cmd/ethrex && cargo bench --bench criterion_benchmark -- --output-format bencher |sed 2d | tee output.txt
     - name: Store benchmark result
