--- a/.github/workflows/ci_criterion_benchmark.yml
+++ b/.github/workflows/ci_criterion_benchmark.yml
@@ -27,7 +27,7 @@ jobs:
         git_user_signingkey: true
         git_commit_gpgsign: true
     - name: Install gnuplot
-      run: apt-get install -y gnuplot
+      run: sudo apt-get install -y gnuplot
     - name: Run benchmark
       run: cd cmd/ethrex && cargo bench --bench criterion_benchmark -- --output-format bencher |sed 2d | tee output.txt
     - name: Export TTY
