--- a/crates/l2/prover/zkvm/interface/sp1/Cargo.toml
+++ b/crates/l2/prover/zkvm/interface/sp1/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 sp1-zkvm = "4.1.0"
 zkvm_interface = { path = "../" }
+cfg-if = "1.0.0"
 
 ethrex-common = { path = "../../../../../common", default-features = false }
 ethrex-rlp = { path = "../../../../../common/rlp" }
