--- a/.github/workflows/ci_criterion_benchmark.yml
+++ b/.github/workflows/ci_criterion_benchmark.yml
@@ -19,6 +19,10 @@ jobs:
     - name: Install Rust
       uses: dtolnay/rust-toolchain@1.85.0
     - uses: actions/checkout@v4
+      with:
+        lfs: true
+    - name: Checkout LFS objects
+      run: git lfs checkout
     - name: Install gnuplot
       run: sudo apt-get install -y gnuplot
     - name: Run benchmark
