--- a/crates/l2/prover/zkvm/interface/pico/Cargo.toml
+++ b/crates/l2/prover/zkvm/interface/pico/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 [dependencies]
 pico-sdk = { git = "https://github.com/brevis-network/pico" }
 zkvm_interface = { path = "../" }
+cfg-if = "1.0.0"
 
 ethrex-common = { path = "../../../../../common", default-features = false }
 ethrex-rlp = { path = "../../../../../common/rlp" }
