Test flamegraphs + criterion on gh-pages

--- a/.github/workflows/flamegraph_reporter.yaml
+++ b/.github/workflows/flamegraph_reporter.yaml
@@ -12,6 +12,8 @@ concurrency:
 on:
   push:
     branches: ["main"]
+  pull_request:
+    branches: ["**"]
   workflow_dispatch:
 
 env:
@@ -498,12 +500,20 @@ jobs:
           time_revm_str="${minutes} minutes ${seconds} seconds"
           sed -i "s/{{REVM_TIME}}/${time_revm_str}/g" pages/levm.html
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      # - name: Setup Pages
+      #   uses: actions/configure-pages@v5
+      # - name: Upload artifact
+      #   uses: actions/upload-pages-artifact@v3
+      #   with:
+      #     path: "pages/"
+      # - name: Deploy to GitHub Pages
+      #   id: deployment
+      #   uses: actions/deploy-pages@v4
+
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          path: "pages/"
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./pages
+          destination_dir: flamegraphs
+          keep_files: true
