Separate between lib and binary modules

--- a/cmd/ethrex/Cargo.toml
+++ b/cmd/ethrex/Cargo.toml
@@ -42,7 +42,7 @@ path = "./ethrex.rs"
 
 [lib]
 name = "ethrex"
-path = "./ethrex.rs"
+path = "./lib.rs"
 
 [features]
 default = ["libmdbx", "c-kzg", "blst"]
