Create the pages directory if it does not exist on the flamegraph workflow

--- a/.github/workflows/flamegraph_reporter.yaml
+++ b/.github/workflows/flamegraph_reporter.yaml
@@ -467,6 +467,7 @@ jobs:
       - name: Update static page locally with new data
         shell: bash
         run: |
+          mkdir -p pages
           cp -r flamegraph_levm.svg pages/
           cp -r flamegraph_revm.svg pages/
           cp -r flamegraph_ethrex.svg pages/
