--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -10,6 +10,8 @@ ethrex-rlp.workspace = true
 ethrex-common.workspace = true
 ethrex-trie.workspace = true
 
+tokio.workspace = true
+
 ethereum-types.workspace = true
 anyhow = "1.0.86"
 bytes.workspace = true
