--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -15,6 +15,7 @@ anyhow = "1.0.86"
 bytes.workspace = true
 tracing.workspace = true
 thiserror.workspace = true
+tokio.workspace = true
 sha3.workspace = true
 hex.workspace = true
 serde = { version = "1.0.203", features = ["derive"] }
