--- a/.github/workflows/flamegraph_reporter.yaml
+++ b/.github/workflows/flamegraph_reporter.yaml
@@ -477,19 +477,19 @@ jobs:
           cp -r flamegraph_reth.svg flamegraphs/
 
           # ETHREX HTML
-          sed -i "s/{{LAST_UPDATE}}/$(TZ='Etc/GMT+3' date +'%Y-%m-%dT%H:%M:%S')/g" flamegraphs/index.html
-          sed -i "s/{{ETHREX_TIME}}/${{ needs.flamegraph-ethrex.outputs.time }}/g" flamegraphs/index.html
-          sed -i "s/{{RETH_TIME}}/${{ needs.flamegraph-reth.outputs.time }}/g" flamegraphs/index.html
+          sed -i "s/{{LAST_UPDATE}}/$(TZ='Etc/GMT+3' date +'%Y-%m-%dT%H:%M:%S')/g" templates/index.html
+          sed -i "s/{{ETHREX_TIME}}/${{ needs.flamegraph-ethrex.outputs.time }}/g" templates/index.html
+          sed -i "s/{{RETH_TIME}}/${{ needs.flamegraph-reth.outputs.time }}/g" templates/index.html
 
           # LEVM HTML
-          sed -i "s/{{LAST_UPDATE}}/$(TZ='Etc/GMT+3' date +'%Y-%m-%dT%H:%M:%S')/g" flamegraphs/levm.html
+          sed -i "s/{{LAST_UPDATE}}/$(TZ='Etc/GMT+3' date +'%Y-%m-%dT%H:%M:%S')/g" templates/levm.html
           time_levm=$(grep "time_levm" time_levm.txt | cut -d '=' -f2)
 
           minutes=$(bc -l <<< "scale=0; $time_levm / 60")
           seconds=$(bc -l <<< "scale=0; $time_levm % 60")
 
           time_levm_str="${minutes} minutes ${seconds} seconds"
-          sed -i "s/{{LEVM_TIME}}/${time_levm_str}/g" flamegraphs/levm.html
+          sed -i "s/{{LEVM_TIME}}/${time_levm_str}/g" templates/levm.html
 
           time_revm=$(grep "time_revm" time_revm.txt | cut -d '=' -f2)
 
@@ -497,7 +497,13 @@ jobs:
           seconds=$(bc -l <<< "scale=0; $time_revm % 60")
 
           time_revm_str="${minutes} minutes ${seconds} seconds"
-          sed -i "s/{{REVM_TIME}}/${time_revm_str}/g" flamegraphs/levm.html
+          sed -i "s/{{REVM_TIME}}/${time_revm_str}/g" templates/levm.html
+
+          rm flamegraphs/levm.html
+          rm flamegraphs/index.html
+
+          cp templates/levm.html flamegraphs/levm.html
+          cp templates/index.html flamegraphs/index.html
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
