Add l2 feature activation from the vm crate

--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -41,6 +41,6 @@ path = "./vm.rs"
 
 [features]
 default = []
-l2 = []
+l2 = ["ethrex-levm/l2"]
 c-kzg = ["revm/c-kzg", "ethrex-levm/c-kzg", "ethrex-common/c-kzg"]
 blst = ["revm/blst"]
