--- a/crates/l2/prover/Cargo.toml
+++ b/crates/l2/prover/Cargo.toml
@@ -46,6 +46,8 @@ name = "ethrex_prover"
 path = "src/main.rs"
 
 [features]
+# prover backends
+exec = []
 pico = ["zkvm_interface/pico", "dep:pico-sdk"]
 risc0 = [
   "zkvm_interface/risc0",
@@ -53,11 +55,12 @@ risc0 = [
   "dep:risc0-ethereum-contracts",
 ]
 sp1 = ["zkvm_interface/sp1", "dep:sp1-sdk"]
+
 gpu = ["risc0-zkvm/cuda", "sp1-sdk/cuda"]
 l2 = [
   "ethrex-vm/l2",
   "zkvm_interface/l2",
-] # the prover can work with both l1 or l2 blocks
+] # the prover can work with either l1 or l2 blocks
 
 [lints.clippy]
 unwrap_used = "deny"
