--- a/cmd/ethrex/Cargo.toml
+++ b/cmd/ethrex/Cargo.toml
@@ -20,7 +20,9 @@ hex.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 k256.workspace = true
-clap = { version = "4.5.4", features = ["cargo"] }
+clap = { version = "4.3", features = ["derive"] }
+clap_complete = "4.5.17"
+eyre = "0.6.12"
 directories = "5.0.1"
 serde_json.workspace = true
 tokio = { version = "1.38.0", features = ["full"] }
