--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -22,6 +22,8 @@ serde_json = "1.0.117"
 libmdbx = { workspace = true, optional = true }
 redb = { workspace = true, optional = true }
 
+cfg-if = "1.0.0"
+
 [features]
 default = []
 libmdbx = ["dep:libmdbx", "ethrex-trie/libmdbx"]
