--- a/crates/common/trie/Makefile
+++ b/crates/common/trie/Makefile
@@ -1,4 +1,8 @@
-.PHONY: bench
+.PHONY: bench ethrex-bench cita-bench
 
-bench:
-	cargo bench
+ethrex-bench:
+	cargo bench --bench ethrex_trie_bench
+cita-bench:
+	cargo bench --bench cita_trie_bench
+
+bench-all: ethrex-bench cita-bench
