benchmarks: run ci only if trie crate changes

--- a/.github/workflows/ci_trie_benchmark.yml
+++ b/.github/workflows/ci_trie_benchmark.yml
@@ -3,6 +3,8 @@ name: trie benchmark
 on:
   pull_request:
     branches: ["**"]
+  paths:
+    - "crates/common/trie/**"
 
 permissions:
   # deployments permission to deploy GitHub pages website
